release-note/1.6.2-beta1/el_GR.md
## [1.6.2-beta1]

### Security
- Διορθώθηκε επειγόντως ένα ζήτημα ασφάλειας υψηλού κινδύνου στη μονάδα διαχείρισης λογαριασμού, βελτιώνοντας περαιτέρω την ασφάλεια των λειτουργιών του διαχειριστή
- Διορθώθηκε επειγόντως ένα ζήτημα ασφάλειας υψηλού κινδύνου στην υπηρεσία αρχείων, βελτιώνοντας την ασφάλεια της πρόσβασης στα αρχεία και των λειτουργιών

### New
- Προστέθηκε η σκοτεινή λειτουργία για την εφαρμογή Αρχεία
- Προστέθηκε υποστήριξη ενσωμάτωσης Alibaba Cloud Drive
- Ενημερώθηκε ο πυρήνας του Linux σε 6.18.9
- Προστέθηκε υποστήριξη προγραμμάτων οδήγησης για NVIDIA 470 / 580 / Open Kernel Module, Intel Xe / Battlemage, Realtek RTW88 / RTL8127, Intel / MediaTek / AIC8800 ασύρματες συσκευές και συσκευές ήχου Cirrus Logic, και προστέθηκε μια αυτόματη ανίχνευση και προσαρμογή προγράμματος οδήγησης NVIDIA που βασίζεται αυτόματα στην έκδοση σκληρού προγράμματος οδήγησης

### Fixed
- Διορθώθηκε η λήξη του κλειδιού OneDrive που προκαλεί προβλήματα σύνδεσης, αποκαταστάθηκε η βασική διαθεσιμότητα ενοποίησης και βελτιστοποιήθηκε ο μηχανισμός ενημέρωσης κλειδιού
- Διορθώθηκε ένα πρόβλημα όπου η εφαρμογή Collabora Server απέκλεισε τα αντίγραφα ασφαλείας, διασφαλίζοντας ότι οι εργασίες δημιουργίας αντιγράφων ασφαλείας μπορούν να εκτελεστούν σωστά
- Διορθώθηκε ένα πρόβλημα όπου πολλές συσκευές αποθήκευσης USB μπορούσαν να αντιστοιχιστούν στο ίδιο σημείο προσάρτησης κατά την εκκίνηση
- Διορθώθηκε ένα πρόβλημα όπου δημιουργήθηκαν επιθήματα παλαιού τύπου «-device-name» όταν τα σημεία προσάρτησης USB ήταν σε διένεξη
- Διορθώθηκε ένα πρόβλημα όπου ο χώρος αποθήκευσης που δημιουργήθηκε από έναν δίσκο ενός διαμερίσματος δεν χρησιμοποιούσε το όνομα που καθορίζεται από τον χρήστη ως σημείο προσάρτησης
- Διορθώθηκε η υποβάθμιση του RAID μετά την επανεκκίνηση όταν δημιουργήθηκε μια συστοιχία RAID από δίσκους με τον ίδιο σειριακό αριθμό
- Διορθώθηκαν ψευδώς θετικά στοιχεία στους ελέγχους εκκίνησης RAID που προκλήθηκαν από ασυνεπείς μορφές ονομάτων συσκευής χρόνου εκτέλεσης

### Optimized
- Βελτιστοποιημένες ροές εργασιών λειτουργίας αρχείων υψηλής συχνότητας όπως εισαγωγή, μετεγκατάσταση, κρυπτογράφηση, αντιγραφή και αποκοπή
- Βελτιστοποιημένη εμφάνιση κατάστασης μεταφόρτωσης μονάδας cloud, καθιστώντας σαφέστερο για τους χρήστες να κατανοούν την τρέχουσα πρόοδο, την κατάσταση ολοκλήρωσης και τους λόγους αποτυχίας

### Tips
- Εάν αντιμετωπίζετε προβλήματα λογισμικού, μη διστάσετε να εγγραφείτε στην κοινότητα του Discord για να συνδεθείτε και να λάβετε υποστήριξη από περισσότερα από 43.000 μέλη της Zima!
- <a href="https://zimaboard.com/discord" target="_blank" style="color:blue">https://zimaboard.com/discord</a>
